Implemented warehouse settings.